# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]
### Added
- [GUI] [FRONTEND] Selector of a custom certificate to use with an api parser
- [LOG_FORWARDER] [HIREDIS] Ability to specify that the destination key is a dynamic template
### Changed
- [LOG_FORWARDER] [HIREDIS] Use updated templates <name>_json
### Fixed
- [FRONTEND] [CLONE] Resolve GUI loading problems when cloning an existing Frontend
- [FRONTEND] [FILEBEAT] Avoid overriding default module config for all Frontends when changed in one
- [FRONTEND] Disable logforwarder if logging disabled
- [FRONTEND] Reload services only on involved nodes


## [2.9.0] - 2023-07-20
### Removed
- [LOG_FORWARDER] [ELASTICSEARCH] RateLimit settings
### Added
- [API_PARSER] New collector **SentinelOne Mobile**
- [API_PARSER] NEW collector **CSC_DOMAINMANAGER**
- [LOG_FORWARDER] Disk-assisted queues for reliability
- [PORTAL] [IDP] Refresh token support through OAuth2 flow
### Changed
- [VOCABULARY] Replace 'slave' word uses with 'replica'
- [NETWORK] Improve the way Node IPs are updated on disk
- [NETIF] [API] Only return from API call when refresh has been finished
- [DEPENDENCIES] Python dependencies upgrade
    - django 3.2.19 -> 3.2.20
    - cryptography 41.0.1 -> 41.0.2
### Fixed
- [PORTAL] [OPENID] Improve error returns and code quality
- [SYSTEM] [CERTIFICATES] Protect used certificates when attempted to be deleted
- [SYSTEM] [CERTIFICATES] Reload HAProxy on certificate change
- [ACLS] Rebuild HAProxy conf on ACL change
- [LOGFORWARDER] [ELASTICSEARCH] Enable ELS>=8 compatibility
- [LOGFORWARDER] [ELASTICSEARCH] Ensure index patterns are kept to lowercase
- [LOGFORWARDER] [ELASTICSEARCH] Avoid newline problems in generated configurations