@@ -5,6 +5,8 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
+### Removed
+- [PREDATOR] Remove predator references
 ### Added
 - [GUI] [FRONTEND] Selector of a custom certificate to use with an api parser
 - [LOG_FORWARDER] [HIREDIS] Ability to specify that the destination key is a dynamic template
